// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EventCard /> Snapshots should match snapshot of small EventCard active 1`] = `
<View
  elevation="0 2px 4px      rgba(152, 152, 166, 0.2)"
  style={
    [
      {
        "shadowColor": "rgba(152, 152, 166, 0.2)",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 4,
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    active={true}
    bRadius={8}
    bgColor="#FFFFFF"
    date={
      {
        "day": "19",
        "dayOfWeek": "thu",
        "month": "dec",
      }
    }
    elevation="0 2px 4px      rgba(152, 152, 166, 0.2)"
    event={
      {
        "name": "Yoga Class",
        "place": "Gympass",
        "time": "19 am",
      }
    }
    focusable={true}
    link=""
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    overflow="hidden"
    pb={16}
    pl={16}
    pr={16}
    pt={16}
    small={true}
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 8,
          "overflow": "hidden",
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 16,
          "shadowColor": "rgba(152, 152, 166, 0.2)",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 4,
        },
        {
          "borderRadius": 16,
          "flexDirection": "row",
          "height": 104,
          "marginRight": 8,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "width": 56,
        },
      ]
    }
    variant=""
  >
    <View
      bg="primary"
      pv="medium"
      small={true}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#D8385E",
            "justifyContent": "center",
            "paddingBottom": 20,
            "paddingTop": 20,
            "width": 56,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "height": 16,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          bgColor="white"
          borderRadius="small"
          style={
            [
              {
                "backgroundColor": "#FFFFFF",
                "borderRadius": 8,
                "height": 8,
                "width": 8,
              },
            ]
          }
        />
      </View>
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Rubik",
              "fontSize": 20,
              "fontWeight": "500",
              "lineHeight": 28,
              "marginBottom": 4,
              "marginTop": 4,
            },
          ]
        }
        variant="white"
      >
        19
      </Text>
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "400",
              "lineHeight": 16,
            },
          ]
        }
        variant="white"
      >
        THU
      </Text>
    </View>
  </View>
</View>
`;

exports[`<EventCard /> Snapshots should match snapshot of small EventCard with day of week and without indicator 1`] = `
<View
  elevation="0 2px 4px      rgba(152, 152, 166, 0.2)"
  style={
    [
      {
        "shadowColor": "rgba(152, 152, 166, 0.2)",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 4,
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    active={false}
    bRadius={8}
    bgColor="#FFFFFF"
    date={
      {
        "day": "19",
        "dayOfWeek": "thu",
        "month": "dec",
      }
    }
    elevation="0 2px 4px      rgba(152, 152, 166, 0.2)"
    event={
      {
        "name": "Yoga Class",
        "place": "Gympass",
        "time": "19 am",
      }
    }
    focusable={false}
    link=""
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    overflow="hidden"
    pb={16}
    pl={16}
    pr={16}
    pt={16}
    small={true}
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 8,
          "overflow": "hidden",
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 16,
          "shadowColor": "rgba(152, 152, 166, 0.2)",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 4,
        },
        {
          "borderRadius": 16,
          "flexDirection": "row",
          "height": 104,
          "marginRight": 8,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "width": 56,
        },
      ]
    }
    variant=""
  >
    <View
      bg="white"
      pv="medium"
      small={true}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "justifyContent": "center",
            "paddingBottom": 20,
            "paddingTop": 20,
            "width": 56,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "height": 16,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#6B6B78",
                "fontFamily": "Rubik",
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 16,
              },
            ]
          }
          variant="deep"
        >
          dec
        </Text>
      </View>
      <Text
        style={
          [
            {
              "color": "#231B22",
              "fontFamily": "Rubik",
              "fontSize": 20,
              "fontWeight": "500",
              "lineHeight": 28,
              "marginBottom": 4,
              "marginTop": 4,
            },
          ]
        }
        variant="secondary"
      >
        19
      </Text>
      <Text
        style={
          [
            {
              "color": "#6B6B78",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "400",
              "lineHeight": 16,
            },
          ]
        }
        variant="deep"
      >
        THU
      </Text>
    </View>
  </View>
</View>
`;

exports[`<EventCard /> Snapshots should match snapshot of small EventCard with event indicator disabled 1`] = `
<View
  elevation="0 2px 4px      rgba(152, 152, 166, 0.2)"
  style={
    [
      {
        "shadowColor": "rgba(152, 152, 166, 0.2)",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 4,
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    active={false}
    bRadius={8}
    bgColor="#FFFFFF"
    date={
      {
        "day": "19",
        "dayOfWeek": "thu",
        "month": "dec",
      }
    }
    elevation="0 2px 4px      rgba(152, 152, 166, 0.2)"
    event={false}
    focusable={true}
    link=""
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    overflow="hidden"
    pb={16}
    pl={16}
    pr={16}
    pt={16}
    small={true}
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 8,
          "overflow": "hidden",
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 16,
          "shadowColor": "rgba(152, 152, 166, 0.2)",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 4,
        },
        {
          "borderRadius": 16,
          "flexDirection": "row",
          "height": 104,
          "marginRight": 8,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "width": 56,
        },
      ]
    }
    variant=""
  >
    <View
      bg="white"
      pv="medium"
      small={true}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "justifyContent": "center",
            "paddingBottom": 20,
            "paddingTop": 20,
            "width": 56,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "height": 16,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          bgColor="light"
          borderRadius="small"
          style={
            [
              {
                "backgroundColor": "#D7D7E0",
                "borderRadius": 8,
                "height": 8,
                "width": 8,
              },
            ]
          }
        />
      </View>
      <Text
        style={
          [
            {
              "color": "#231B22",
              "fontFamily": "Rubik",
              "fontSize": 20,
              "fontWeight": "500",
              "lineHeight": 28,
              "marginBottom": 4,
              "marginTop": 4,
            },
          ]
        }
        variant="secondary"
      >
        19
      </Text>
      <Text
        style={
          [
            {
              "color": "#6B6B78",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "400",
              "lineHeight": 16,
            },
          ]
        }
        variant="deep"
      >
        THU
      </Text>
    </View>
  </View>
</View>
`;

exports[`<EventCard /> Snapshots should match snapshot of small EventCard with event indicator enabled 1`] = `
<View
  elevation="0 2px 4px      rgba(152, 152, 166, 0.2)"
  style={
    [
      {
        "shadowColor": "rgba(152, 152, 166, 0.2)",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 4,
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    active={false}
    bRadius={8}
    bgColor="#FFFFFF"
    date={
      {
        "day": "19",
        "dayOfWeek": "thu",
        "month": "dec",
      }
    }
    elevation="0 2px 4px      rgba(152, 152, 166, 0.2)"
    event={
      {
        "name": "Yoga Class",
        "place": "Gympass",
        "time": "19 am",
      }
    }
    focusable={true}
    link=""
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    overflow="hidden"
    pb={16}
    pl={16}
    pr={16}
    pt={16}
    small={true}
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 8,
          "overflow": "hidden",
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 16,
          "shadowColor": "rgba(152, 152, 166, 0.2)",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 4,
        },
        {
          "borderRadius": 16,
          "flexDirection": "row",
          "height": 104,
          "marginRight": 8,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "width": 56,
        },
      ]
    }
    variant=""
  >
    <View
      bg="white"
      pv="medium"
      small={true}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "justifyContent": "center",
            "paddingBottom": 20,
            "paddingTop": 20,
            "width": 56,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "height": 16,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          bgColor="primary"
          borderRadius="small"
          style={
            [
              {
                "backgroundColor": "#D8385E",
                "borderRadius": 8,
                "height": 8,
                "width": 8,
              },
            ]
          }
        />
      </View>
      <Text
        style={
          [
            {
              "color": "#231B22",
              "fontFamily": "Rubik",
              "fontSize": 20,
              "fontWeight": "500",
              "lineHeight": 28,
              "marginBottom": 4,
              "marginTop": 4,
            },
          ]
        }
        variant="secondary"
      >
        19
      </Text>
      <Text
        style={
          [
            {
              "color": "#6B6B78",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "400",
              "lineHeight": 16,
            },
          ]
        }
        variant="deep"
      >
        THU
      </Text>
    </View>
  </View>
</View>
`;

exports[`<EventCard /> Snapshots should match snapshot with full EventCard 1`] = `
<View
  elevation="0 2px 4px      rgba(152, 152, 166, 0.2)"
  style={
    [
      {
        "shadowColor": "rgba(152, 152, 166, 0.2)",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 4,
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    active={false}
    bRadius={8}
    bgColor="#FFFFFF"
    date={
      {
        "day": "19",
        "dayOfWeek": "thu",
        "month": "dec",
      }
    }
    elevation="0 2px 4px      rgba(152, 152, 166, 0.2)"
    event={
      {
        "name": "Yoga Class",
        "place": "Gympass",
        "time": "19 am",
      }
    }
    focusable={false}
    link=""
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    overflow="hidden"
    pb={16}
    pl={16}
    pr={16}
    pt={16}
    small={false}
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
          "borderRadius": 8,
          "overflow": "hidden",
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 16,
          "shadowColor": "rgba(152, 152, 166, 0.2)",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 4,
        },
        {
          "borderRadius": 16,
          "flexDirection": "row",
          "height": 104,
          "marginRight": 8,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "width": 280,
        },
      ]
    }
    variant=""
  >
    <View
      bg="primary"
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#D8385E",
            "justifyContent": "center",
            "width": 56,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "height": 16,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          inverted={true}
          style={
            [
              {
                "color": "#FFFFFF",
                "fontFamily": "Rubik",
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 16,
              },
            ]
          }
        >
          dec
        </Text>
      </View>
      <Text
        inverted={true}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Rubik",
              "fontSize": 20,
              "fontWeight": "500",
              "lineHeight": 28,
              "marginBottom": 4,
              "marginTop": 4,
            },
          ]
        }
      >
        19
      </Text>
      <Text
        inverted={true}
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "400",
              "lineHeight": 16,
            },
          ]
        }
      >
        THU
      </Text>
    </View>
    <View
      p="small"
      pl="xsmall"
      style={
        [
          {
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "paddingBottom": 16,
            "paddingLeft": 12,
            "paddingRight": 16,
            "paddingTop": 16,
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        size="small"
        style={
          [
            {
              "color": "#231B22",
              "fontFamily": "Rubik",
              "fontSize": 14,
              "fontWeight": "500",
              "lineHeight": 20,
              "marginBottom": 4,
            },
          ]
        }
      >
        Yoga Class
      </Text>
      <Text
        numberOfLines={1}
        style={
          [
            {
              "color": "#6B6B78",
              "fontFamily": "Rubik",
              "fontSize": 12,
              "fontWeight": "400",
              "lineHeight": 16,
              "marginBottom": 12,
              "width": 180,
            },
          ]
        }
        variant="deep"
      >
        Gympass
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
              },
            ]
          }
        >
          <RNSVGSvgView
            fill="#231B22"
            focusable={false}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "marginRight": 5,
                },
                {
                  "opacity": 1,
                },
                null,
              ]
            }
          >
            <RNSVGGroup
              fill={
                [
                  0,
                  4280490786,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              font={{}}
              matrix={
                [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                [
                  "fill",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            />
          </RNSVGSvgView>
          <Text
            style={
              [
                {
                  "color": "#231B22",
                  "fontFamily": "Rubik",
                  "fontSize": 12,
                  "fontWeight": "400",
                  "lineHeight": 16,
                },
              ]
            }
          >
            19 am
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
